--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -69,3 +69,31 @@ jobs:
           
       - name: Build site
         run: Rscript -e 'bookdown::render_book("index.Rmd", quiet = FALSE)'
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: _book
+          path: _book/
+
+
+  checkout-and-deploy:
+    runs-on: ubuntu-latest
+    needs: bookdown
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      
+      - name: Download artifact
+        uses: actions/download-artifact@v1.0.0
+        with:
+          # Artifact name
+          name: _book # optional
+          # Destination path
+          path: _book # optional
+          
+      - name: Deploy to GitHub Pages
+        uses: Cecilapp/GitHub-Pages-deploy@master
+        env:
+          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
+          GH_TOKEN: ${{ secrets.GH_PAT }} # https://github.com/settings/tokens
+          BUILD_DIR: _book/                     # "_site/" by default
