--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -78,7 +78,7 @@ jobs:
 
   checkout-and-deploy:
     runs-on: ubuntu-latest
-    needs: bookdown
+    needs: build
     steps:
       - name: Checkout
         uses: actions/checkout@master
