--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -72,8 +72,8 @@ jobs:
 
       - uses: actions/upload-artifact@v1
         with:
-          name: _book
-          path: _book/
+          name: _site
+          path: _site/
 
 
   checkout-and-deploy:
@@ -85,15 +85,10 @@ jobs:
       
       - name: Download artifact
         uses: actions/download-artifact@v1.0.0
-        with:
-          # Artifact name
-          name: _book # optional
-          # Destination path
-          path: _book # optional
           
       - name: Deploy to GitHub Pages
         uses: Cecilapp/GitHub-Pages-deploy@master
         env:
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.GH_PAT }} # https://github.com/settings/tokens
-          BUILD_DIR: _book/                     # "_site/" by default
+          BUILD_DIR: _site/                     # "_site/" by default
