--- a/.github/workflows/bookdown.yaml
+++ b/.github/workflows/bookdown.yaml
@@ -85,6 +85,11 @@ jobs:
       
       - name: Download artifact
         uses: actions/download-artifact@v1.0.0
+        with:
+          # Artifact name
+          name: _site # optional
+          # Destination path
+          path: _site/ # optional
           
       - name: Deploy to GitHub Pages
         uses: Cecilapp/GitHub-Pages-deploy@master
